--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
-#root { 
-  margin: 0 auto;
+#root {
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
   text-align: center;
 }
 
